--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,7 +5,7 @@
 	<body>
 		<div>
 			<a href="/">Home</a> | 
-			<a href="/users/add">Add New User</a> | 
-			<a href="/users">All Users List</a>
+			<a href="/postings/add">Add Jobs</a> | 
+			<a href="/postings">All Jobs List</a>
 		</div>	
 		<h1><%= title %></h1>
