--- a/views/posting/list.ejs
+++ b/views/posting/list.ejs
@@ -14,7 +14,8 @@ including header content which is common for all pages
 <table width='80%' border=0>
 
 	<tr style='text-align:left; background-color:#CCC'>
-		<th>Job title</th>
+	        <th>Job ID</th>
+	        <th>Job title</th>
 		<th>Job description</th>
 		<th>Location</th>
 		<th>Action</th>
@@ -30,6 +31,7 @@ including header content which is common for all pages
 	<% if (data) { %>
 	<% data.forEach(function(posting){ %>
 		<tr>
+			<td><%= posting.job_id %></td>
 			<td><%= posting.job_title %></td>
 			<td><%= posting.job_description %></td>
 			<td><%= posting.location %></td>
