remove add job link on home page and create a button

--- a/views/posting/list.ejs
+++ b/views/posting/list.ejs
@@ -11,6 +11,11 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>	
 
+
+<form method="get" action="/postings/add">
+ <input type="submit" name="create" value='Create'>
+</form>
+
 <table width='80%' border=0>
 
 	<tr style='text-align:left; background-color:#CCC'>
