--- a/views/posting/edit.ejs
+++ b/views/posting/edit.ejs
@@ -27,7 +27,7 @@ including header content which is common for all pages
 		</tr>
 		<tr> 
 			<td></td>
-			<td><input type="submit" name="Submit" value="Edit" /></td>
+			<td><input type="submit" name="Submit" value="Save" /></td>
 		</tr>
 	</table>
 	<input type="hidden" name="_method" value="PUT" />
