add apply feature to add applicants

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,6 +5,7 @@
 	<body>
 		<div>
 			<a href="/">Home</a> | 
-			<a href="/postings">All Jobs List</a>
+			<a href="/postings">Jobs List</a>
+			<a href="/applicants">Applicants List</a>
 		</div>	
 		<h1><%= title %></h1>
