--- a/views/applicants/add.ejs
+++ b/views/applicants/add.ejs
@@ -27,9 +27,19 @@ including header content which is common for all pages
 			<td>Last Name</td>
 			<td><input type="text" name="last_name" value="<%= last_name %>" /></td>
 		</tr>
-		<tr> 
+		<tr>
+                <tr>
+                        <td>Email</td>
+                        <td><input type="text" name="email" id="email" value="<%= email %>" /></td>
+                </tr>
+                <tr>
+                        <td>Phone</td>
+                        <td><input type="text" name="phone" value="<%= phone %>" /></td>
+                </tr>
+                <tr>
 			<td></td>
-			<td><input type="submit" name="Submit" value="Add" />
+			<td><input type="submit" name="Submit" value="Apply" />
+                            <input type="hidden" name='job_id' value="<%= job_id %>"></td>
 		</tr>
 	</table>
 </form>
