--- a/views/applicants/edit.ejs
+++ b/views/applicants/edit.ejs
@@ -21,6 +21,14 @@ including header content which is common for all pages
 			<td>Last Name</td>
 			<td><input type="text" name="last_name" value="<%= last_name %>" /></td>
 		</tr>
+                <tr>
+                        <td>Email</td>
+                        <td><input type="text" name="email" id="email" value="<%= email %>" /></td>
+                </tr>
+                <tr>
+                        <td>Phone</td>
+                        <td><input type="text" name="phone" value="<%= phone %>" /></td>
+                </tr>
 		<tr> 
 			<td></td>
 			<td><input type="submit" name="Submit" value="Save" /></td>
