add Boostrap and change navigation bar

--- a/views/applicants/add.ejs
+++ b/views/applicants/add.ejs
@@ -44,6 +44,7 @@ including header content which is common for all pages
 	</table>
 </form>
 
+</div><!--container class-->
 <!--
 including footer content which is common for all pages
 -->
