--- a/views/applicants/edit.ejs
+++ b/views/applicants/edit.ejs
@@ -37,6 +37,7 @@ including header content which is common for all pages
 	<input type="hidden" name="_method" value="PUT" />
 </form>
 
+</div><!--container class-->
 <!--
 including footer content which is common for all pages
 -->
