--- a/views/posting/list.ejs
+++ b/views/posting/list.ejs
@@ -59,6 +59,7 @@ including header content which is common for all pages
 
 </table>
 
+</div><!--container class-->
 <!--
 including footer content which is common for all pages
 -->
