--- a/views/applicants/list.ejs
+++ b/views/applicants/list.ejs
@@ -56,6 +56,7 @@ including header content which is common for all pages
 
 </table>
 
+</div><!--container class-->
 <!--
 including footer content which is common for all pages
 -->
