--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,11 +1,25 @@
-<html>
-	<head>
-		<title><%= title %></title>
-	</head>
-	<body>
-		<div>
-			<a href="/">Home</a> | 
-			<a href="/postings">Jobs List</a>
-			<a href="/applicants">Applicants List</a>
-		</div>	
-		<h1><%= title %></h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"</script>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <div>
+      <nav class="navbar navbar-inverse" role="navigation" style="padding-left:130px;">
+	<ul class="nav navbar-nav">
+	  <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+	  <li class="active"><a href="/postings">Job List<span class="sr-only">(current)</span></a></li>
+	  <li class="active"><a href="/applicants">Applicants List<span class="sr-only">(current)</span></a></li>
+	</ul>
+      </nav>
+    </div>
+
+    <div class="container">
+      <h1><%= title %></h1>
