--- a/views/posting/add.ejs
+++ b/views/posting/add.ejs
@@ -32,6 +32,7 @@ including header content which is common for all pages
 	</table>
 </form>
 
+</div><!--container class-->
 <!--
 including footer content which is common for all pages
 -->
