--- a/views/posting/list.ejs
+++ b/views/posting/list.ejs
@@ -22,8 +22,8 @@ including header content which is common for all pages
 	<!--<tr style='text-align:left; background-color:#CCC'>-->
 		<tr>
 			<th scope="col">Job ID</th>
-			<th scope="col">Job title</th>
-			<th scope="col">Job description</th>
+			<th scope="col">Job Title</th>
+			<th scope="col">Job Description</th>
 			<th scope="col">Location</th>
 			<th scope="col">Action</th>
 		</tr>
