--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	       <div class="navbar-nav">
            <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
-           <a class="nav-item nav-link" href="/postings">Job Lists</a>
+           <a class="nav-item nav-link" href="/postings">Jobs</a>
            <a class="nav-item nav-link" href="/applicants">Applicants</a>
          </div>
        </div>
