fix typo - missing word

--- a/views/applicants/list.ejs
+++ b/views/applicants/list.ejs
@@ -19,7 +19,7 @@ including header content which is common for all pages
 			<th scope="col">Last name</th>
 			<th scope="col">Email</th>
 			<th scope="col">Phone</th>
-			<th scope="col">Applied Job</th>
+			<th scope="col">Applied Job ID</th>
 			<th scope="col">Applied Date</th>
 			<th scope="col">Action</th>
 		</tr>
