--- a/views/posting/list.ejs
+++ b/views/posting/list.ejs
@@ -25,6 +25,7 @@ including header content which is common for all pages
 			<th scope="col">Job Title</th>
 			<th scope="col">Job Description</th>
 			<th scope="col">Location</th>
+			<th scope="col">Posted Date</th>
 			<th scope="col">Action</th>
 		</tr>
 	</thead>
@@ -42,6 +43,7 @@ including header content which is common for all pages
 				<td><%= posting.job_title %></td>
 				<td><%= posting.job_description %></td>
 				<td><%= posting.location %></td>
+				<td><%= posting.posted_date.toUTCString().split(' ').slice(0, 5).join(' ') %></td>
 				<td>
 
 				<div class="btn-group" role="group" aria-label="Basic example">
